crates/nidus/tests/ui/route_missing_path.rs
use nidus::prelude::*;

#[controller("/users")]
struct UsersController;

#[routes]
impl UsersController {
    #[get]
    async fn find_one(&self) {}
}

fn main() {}
